apps/oxlint/src/snapshots/fixtures__cli__overrides_env_globals_-c .oxlintrc.json .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
assertion_line: 142
---
########## 
arguments: -c .oxlintrc.json .
working directory: fixtures/cli/overrides_env_globals
----------

  ! eslint(no-global-assign): Read-only global 'globalThis' should not be modified.
   ,-[src/test.js:2:1]
 1 | // for env detection
 2 | globalThis = 'abc';
   : ^^^^^|^^^^
   :      `-- Read-only global 'globalThis' should not be modified.
 3 | $ = 'abc';
   `----
  help: Use a local variable instead of modifying the global 'globalThis'.

  ! eslint(no-global-assign): Read-only global 'globalThis' should not be modified.
   ,-[test.js:2:1]
 1 | // for env detection
 2 | globalThis = 'abc';
   : ^^^^^|^^^^
   :      `-- Read-only global 'globalThis' should not be modified.
 3 | $ = 'abc';
   `----
  help: Use a local variable instead of modifying the global 'globalThis'.

  ! eslint(no-global-assign): Read-only global '$' should not be modified.
   ,-[test.js:3:1]
 2 | globalThis = 'abc';
 3 | $ = 'abc';
   : |
   : `-- Read-only global '$' should not be modified.
 4 | 
   `----
  help: Use a local variable instead of modifying the global '$'.

  ! eslint(no-global-assign): Read-only global 'Foo' should not be modified.
   ,-[test.js:6:1]
 5 | // for globals detection
 6 | Foo = 'readable';
   : ^|^
   :  `-- Read-only global 'Foo' should not be modified.
   `----
  help: Use a local variable instead of modifying the global 'Foo'.

  ! eslint(no-global-assign): Read-only global 'globalThis' should not be modified.
   ,-[test.ts:2:1]
 1 | // for env detection
 2 | globalThis = 'abc';
   : ^^^^^|^^^^
   :      `-- Read-only global 'globalThis' should not be modified.
 3 | $ = 'abc';
   `----
  help: Use a local variable instead of modifying the global 'globalThis'.

Found 5 warnings and 0 errors.
Finished in <variable>ms on 3 files using 1 threads.
----------
CLI result: LintSucceeded
----------
