apps/oxlint/src/snapshots/fixtures__cli__report_unused_directives_-c .oxlintrc-with-rudd.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc-with-rudd.json
working directory: fixtures/cli/report_unused_directives
----------

  ! Unused eslint-disable directive (no problems were reported from no-debugger).
   ,-[test-multiple-scripts.vue:6:29]
 5 | <script>
 6 | // eslint-disable-next-line no-debugger
   :                             ^^^^^^^^^^^
 7 | console.log('regular script');
   `----

  ! eslint(no-console): Unexpected console statement.
   ,-[test-multiple-scripts.vue:7:1]
 6 | // eslint-disable-next-line no-debugger
 7 | console.log('regular script');
   : ^^^^^^^^^^^
 8 | 
   `----
  help: Delete this console statement.

  ! Unused eslint-disable directive (no problems were reported from no-console).
    ,-[test-multiple-scripts.vue:9:29]
  8 | 
  9 | // eslint-disable-next-line no-console
    :                             ^^^^^^^^^^
 10 | debugger;
    `----

  ! eslint(no-debugger): `debugger` statement is not allowed
    ,-[test-multiple-scripts.vue:10:1]
  9 | // eslint-disable-next-line no-console
 10 | debugger;
    : ^^^^^^^^^
 11 | </script>
    `----
  help: Remove the debugger statement

  ! Unused eslint-disable directive (no problems were reported from no-unused-vars).
    ,-[test-multiple-scripts.vue:17:29]
 16 | 
 17 | // eslint-disable-next-line no-unused-vars
    :                             ^^^^^^^^^^^^^^
 18 | const unusedVariable2 = 100;
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-debugger).
    ,-[test-multiple-scripts.vue:30:29]
 29 | 
 30 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                             ^^^^^^^^^^^
 31 | console.log("complete line");
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-for-loop).
    ,-[test-multiple-scripts.vue:30:42]
 29 | 
 30 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                                          ^^^^^^^^^^^
 31 | console.log("complete line");
    `----

  ! eslint(no-console): Unexpected console statement.
    ,-[test-multiple-scripts.vue:31:1]
 30 | // oxlint-disable-next-line no-debugger, no-for-loop
 31 | console.log("complete line");
    : ^^^^^^^^^^^
 32 | 
    `----
  help: Delete this console statement.

  ! Unused eslint-disable directive (no problems were reported from no-debugger).
   ,-[test.astro:5:29]
 4 | 
 5 | // eslint-disable-next-line no-debugger
   :                             ^^^^^^^^^^^
 6 | console.log('This is a test');
   `----

  ! Unused eslint-disable directive (no problems were reported from no-console).
    ,-[test.astro:10:29]
  9 | 
 10 | // eslint-disable-next-line no-console
    :                             ^^^^^^^^^^
 11 | debugger;
    `----

  ! eslint(no-debugger): `debugger` statement is not allowed
    ,-[test.astro:11:1]
 10 | // eslint-disable-next-line no-console
 11 | debugger;
    : ^^^^^^^^^
 12 | ---
    `----
  help: Remove the debugger statement

  ! Unused eslint-disable directive (no problems were reported from no-unused-vars).
    ,-[test.astro:17:29]
 16 | <script>
 17 | // eslint-disable-next-line no-unused-vars
    :                             ^^^^^^^^^^^^^^
 18 | const unusedVariable2 = 100;
    `----

  ! Unused eslint-disable directive (no problems were reported from no-debugger).
    ,-[test.astro:28:41]
 27 | 
 28 | // eslint-disable-next-line no-console, no-debugger
    :                                         ^^^^^^^^^^^
 29 | console.log('no');
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-debugger).
    ,-[test.astro:31:29]
 30 | 
 31 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                             ^^^^^^^^^^^
 32 | console.log("complete line");
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-for-loop).
    ,-[test.astro:31:42]
 30 | 
 31 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                                          ^^^^^^^^^^^
 32 | console.log("complete line");
    `----

  ! eslint(no-console): Unexpected console statement.
    ,-[test.astro:32:1]
 31 | // oxlint-disable-next-line no-debugger, no-for-loop
 32 | console.log("complete line");
    : ^^^^^^^^^^^
 33 | 
    `----
  help: Delete this console statement.

  ! Unused eslint-enable directive (no matching eslint-disable directives were found).
    ,-[test.astro:36:3]
 35 | 
 36 | // eslint-enable
    :   ^^^^^^^^^^^^^^
 37 | </script>
    `----

  ! Unused eslint-disable directive (no problems were reported from no-debugger).
   ,-[test.js:4:29]
 3 | 
 4 | // eslint-disable-next-line no-debugger
   :                             ^^^^^^^^^^^
 5 | console.log('This is a test');
   `----

  ! Unused eslint-disable directive (no problems were reported from no-console).
    ,-[test.js:9:29]
  8 | 
  9 | // eslint-disable-next-line no-console
    :                             ^^^^^^^^^^
 10 | debugger;
    `----

  ! eslint(no-debugger): `debugger` statement is not allowed
    ,-[test.js:10:1]
  9 | // eslint-disable-next-line no-console
 10 | debugger;
    : ^^^^^^^^^
 11 | 
    `----
  help: Remove the debugger statement

  ! Unused eslint-disable directive (no problems were reported from no-debugger).
    ,-[test.js:23:41]
 22 | 
 23 | // eslint-disable-next-line no-console, no-debugger
    :                                         ^^^^^^^^^^^
 24 | console.log('no');
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-debugger).
    ,-[test.js:26:29]
 25 | 
 26 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                             ^^^^^^^^^^^
 27 | console.log("complete line");
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-for-loop).
    ,-[test.js:26:42]
 25 | 
 26 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                                          ^^^^^^^^^^^
 27 | console.log("complete line");
    `----

  ! eslint(no-console): Unexpected console statement.
    ,-[test.js:27:1]
 26 | // oxlint-disable-next-line no-debugger, no-for-loop
 27 | console.log("complete line");
    : ^^^^^^^^^^^
 28 | 
    `----
  help: Delete this console statement.

  ! Unused eslint-enable directive (no matching eslint-disable directives were found).
    ,-[test.js:31:3]
 30 | 
 31 | // eslint-enable
    :   ^^^^^^^^^^^^^^
    `----

  ! Unused eslint-disable directive (no problems were reported from no-debugger).
   ,-[test.svelte:5:29]
 4 | 
 5 | // eslint-disable-next-line no-debugger
   :                             ^^^^^^^^^^^
 6 | console.log('This is a test');
   `----

  ! Unused eslint-disable directive (no problems were reported from no-console).
    ,-[test.svelte:10:29]
  9 | 
 10 | // eslint-disable-next-line no-console
    :                             ^^^^^^^^^^
 11 | debugger;
    `----

  ! eslint(no-debugger): `debugger` statement is not allowed
    ,-[test.svelte:11:1]
 10 | // eslint-disable-next-line no-console
 11 | debugger;
    : ^^^^^^^^^
 12 | 
    `----
  help: Remove the debugger statement

  ! Unused eslint-disable directive (no problems were reported from no-unused-vars).
    ,-[test.svelte:13:29]
 12 | 
 13 | // eslint-disable-next-line no-unused-vars
    :                             ^^^^^^^^^^^^^^
 14 | const unusedVariable2 = 100;
    `----

  ! Unused eslint-disable directive (no problems were reported from no-debugger).
    ,-[test.svelte:24:41]
 23 | 
 24 | // eslint-disable-next-line no-console, no-debugger
    :                                         ^^^^^^^^^^^
 25 | console.log('no');
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-debugger).
    ,-[test.svelte:27:29]
 26 | 
 27 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                             ^^^^^^^^^^^
 28 | console.log("complete line");
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-for-loop).
    ,-[test.svelte:27:42]
 26 | 
 27 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                                          ^^^^^^^^^^^
 28 | console.log("complete line");
    `----

  ! eslint(no-console): Unexpected console statement.
    ,-[test.svelte:28:1]
 27 | // oxlint-disable-next-line no-debugger, no-for-loop
 28 | console.log("complete line");
    : ^^^^^^^^^^^
 29 | 
    `----
  help: Delete this console statement.

  ! Unused eslint-enable directive (no matching eslint-disable directives were found).
    ,-[test.svelte:32:3]
 31 | 
 32 | // eslint-enable
    :   ^^^^^^^^^^^^^^
 33 | </script>
    `----

  ! Unused eslint-disable directive (no problems were reported from no-debugger).
    ,-[test.vue:9:29]
  8 | 
  9 | // eslint-disable-next-line no-debugger
    :                             ^^^^^^^^^^^
 10 | console.log('This is a test');
    `----

  ! Unused eslint-disable directive (no problems were reported from no-console).
    ,-[test.vue:14:29]
 13 | 
 14 | // eslint-disable-next-line no-console
    :                             ^^^^^^^^^^
 15 | debugger;
    `----

  ! eslint(no-debugger): `debugger` statement is not allowed
    ,-[test.vue:15:1]
 14 | // eslint-disable-next-line no-console
 15 | debugger;
    : ^^^^^^^^^
 16 | 
    `----
  help: Remove the debugger statement

  ! Unused eslint-disable directive (no problems were reported from no-unused-vars).
    ,-[test.vue:17:29]
 16 | 
 17 | // eslint-disable-next-line no-unused-vars
    :                             ^^^^^^^^^^^^^^
 18 | const unusedVariable2 = 100;
    `----

  ! Unused eslint-disable directive (no problems were reported from no-debugger).
    ,-[test.vue:28:41]
 27 | 
 28 | // eslint-disable-next-line no-console, no-debugger
    :                                         ^^^^^^^^^^^
 29 | console.log('no');
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-debugger).
    ,-[test.vue:31:29]
 30 | 
 31 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                             ^^^^^^^^^^^
 32 | console.log("complete line");
    `----

  ! Unused oxlint-disable directive (no problems were reported from no-for-loop).
    ,-[test.vue:31:42]
 30 | 
 31 | // oxlint-disable-next-line no-debugger, no-for-loop
    :                                          ^^^^^^^^^^^
 32 | console.log("complete line");
    `----

  ! eslint(no-console): Unexpected console statement.
    ,-[test.vue:32:1]
 31 | // oxlint-disable-next-line no-debugger, no-for-loop
 32 | console.log("complete line");
    : ^^^^^^^^^^^
 33 | 
    `----
  help: Delete this console statement.

  ! Unused eslint-enable directive (no matching eslint-disable directives were found).
    ,-[test.vue:36:3]
 35 | 
 36 | // eslint-enable
    :   ^^^^^^^^^^^^^^
 37 | </script>
    `----

Found 43 warnings and 0 errors.
Finished in <variable>ms on 5 files with 97 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
